<resources>
    <string name="app_name">Jersey</string>
    <string name="action_settings">Settings</string>
    <string name="player_name_hint">Player name</string>
    <string name="player_number_hint">Player number</string>
    <string name="reset">RESET</string>
    <string name="reset_confirmation_Dialog">Reset</string>
    <string name="android">ANDROID</string>
    <string name="defaultPlayerNumber">17</string>
    <string name="dialog_label_name_text">Name</string>
    <string name="player_name_placeholder">Player name</string>
    <string name="player_number_tex">Number</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="edit_jersey_title_text">Update Jersey Info</string>
    <string name="confirmation_dialog_message">Reset jersey info?</string>
</resources>
