<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_label_name_text" />

    <EditText
        android:id="@+id/edit_name"
        android:cursorVisible="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@null"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/player_name_hint"
        android:inputType="textCapCharacters" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_number_tex" />

    <EditText
        android:id="@+id/edit_quantity"
        android:layout_width="match_parent"
        android:cursorVisible="true"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@null"
        android:hint="@string/player_number_hint"
        android:inputType="number" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:showText="true"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textOff="@string/blue"
        android:thumbTextPadding="2dp"
        android:switchMinWidth="56dp"
        android:thumb="@drawable/thumb"
        android:track="@drawable/track"
        android:textOn="@string/red" />


</LinearLayout>
